# process-ai-core

./: .cursorignore  .dockerignore  .env.example  .env.production  .env.production.example  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.ui  FIX-COOKIES.md  alembic.ini  pyproject.toml  run_api.py  run_api.sh  run_api_local.sh  run_api_prod.sh  run_api_test.sh  test_openai.py
.cursor/: rules.md
alembic/: README.md  env.py  script.py.mako
api/: README.md  __init__.py  artifact_signing.py  dependencies.py  main.py  request_cache.py  workspace_client.py
archivos/: reunion_demo.m4a  reunion_demo_1.m4a
data/: process_ai.sqlite  process_ai_core.sqlite
docs/: ALCANCE_REFACTOR_UI_CICLO_CORE.md  ALMACENAMIENTO_Y_ARTEFACTOS_PLAN.md  AMBIENTES.md  ANALISIS_PROTOTIPO_VS_IMPLEMENTACION.md  ARCHITECTURE_PROPOSAL.md  AUTH_ARCHITECTURE.md  AUTH_IMPLEMENTATION_PLAN.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_SETUP.md  BRANCH_RECORD_AUDIO.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_2026-05_MVP_PLAN.md  CROSS_PLATFORM.md  DATA_MODEL.md  DB_SETUP_FROM_SCRATCH.md  ENVIRONMENTS.md  ESTRATEGIA_COMERCIAL_Y_PRICING.md  GDD26.md  GDD27.md  GDD28.md  HANDOFF_DOCUMENT_TYPES.md  HANDOFF_FOLDERS_GOVERNANCE.md  INTEGRACION_MARGAY_WORKSPACE.md  INTEGRACION_MODULO_NUEVO.md  METADATA_DESIGN.md  MIGRATION_V2.md  MODELS.md  MVP_TAREAS_POR_ETAPA.md  ONBOARDING_EMAILS.md  ONBOARDING_FLOW_ANALYSIS.md  PERMISSIONS_MODEL.md  PLAN_DOCUMENT_TYPES.md  PLAN_PRUEBAS_FASE_0.md  PROCESS_AI_CORE_CONTEXT_MERGED.md  PROJECT_CONTEXT.md  QUICK_SUPABASE_SETUP.md  RAG_IMPLEMENTATION_PLAN.md  RESUMEN_CAMBIOS_DEVELOP_SANTIDALTO.md  ROLES_OPERATIVOS_Y_PERMISOS_POR_CARPETA.md  SPEC_FASE_0_1_CIMIENTOS_EVIDENCIAS.md  (+14 more)
migrations/: 001_create_schema.sql  002_approved_pdf_artifact.sql  003_drop_artifacts_table.sql  004_add_source_file_key.sql
ops/: bootstrap-test-infra.sh  deploy.py  release.py
process_ai_core/: __init__.py  assets_json.py  cli.py  config.py  doc_engine.py  document_import.py  domain_models.py  engine.py  evidence_processing.py  ingest.py  input_manifest.py  llm_client.py  media.py  models.py  prompt_context.py  prompts.py  upload_validation.py
process_ai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prototipo/: Process AI - Prototipo (1).html
scripts/: bench_semantic.py
tests/: README.md  _pg_harness.py  conftest.py  test_ai_providers.py  test_artifact_signing.py  test_assets_json.py  test_cross_tenant_isolation.py  test_document_import.py  test_document_types_seeding.py  test_engine.py  (+30 more)
(+376 files in other folders)
