[project]
name = "process-ai-core"
version = "0.1.0"
description = "Core de IA para generar documentación de procesos a partir de audio, video, imágenes y texto."
authors = [
    { name = "Santiago" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.35.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["process_ai_core"]

[tool.pytest.ini_options]
pythonpath = [
    "process_ai_core"
]